# Kripton

./: LICENSE  README.md
docs/: .gitignore  Architecture.md  Build.md  Developer.md  Doxyfile  Logs.md  Policy.md  Security.md  Standardization.md
include/: Global.h
include/Algorithm/: Algorithm.h  AlgorithmPool.h
include/Algorithm/Caesar/: Caesar.h
include/Algorithm/Xor/: Xor.h
include/CryptPool/: CryptPool.h
include/File/: File.h
include/File/Logger/: Logger.h
include/Flag/: Flag.h
include/Handler/Crash/: CrashBase.h
include/Platform/: Platform.h
include/Singleton/: Singleton.h
include/Socket/: AccessPolicy.h  NetPacket.h  Socket.h
include/Socket/Server/: Server.h
include/Test/: Test.h
include/ThreadPool/: ThreadPool.h
include/Tool/Utf/: Utf.h
include/algorithm-ex/xor/: Xor.h
include/cipher/xor/: xor.hpp
include/core/: algorithm.hpp  buildtype.hpp  crash.hpp  flag.hpp  platform.hpp  status.hpp  version.hpp
include/crypto/: crypto.hpp
include/crypto/xor/: xor.hpp
include/dev/: Developer.h  developer.hpp
include/dev/config/: build.hpp  config.hpp
include/dev/core/: source.hpp
include/dev/debugger/: debugger.hpp
include/dev/log/: levels.hpp  logger.hpp  macros.hpp  output.hpp
include/dev/test/: assert.hpp  expect.hpp
include/dev/trace/: timeline.hpp  trace.hpp
include/devel/: Developer.h  Doxyfile
include/devel/config/: DevelBuild.h  DevelFeatures.h  DevelVersion.h
include/devel/core/: Category.h  Contract.h  Event.h  Source.h
include/devel/docs/: Architecture.md  Coding.md  Overview.md
include/devel/log/: Levels.h  Logger.h  Macros.h  Sinks.h
include/devel/test/: Assert.h  Expect.h
include/devel/trace/: Timeline.h  Trace.h
include/developer/: Developer.h
include/developer/config/: Build.h  Config.h  Version.h
include/developer/core/: Source.h
include/developer/log/: Levels.h  Logger.h  Macros.h  Output.h
include/developer/test/: Assert.h  Expect.h
include/developer/trace/: Timeline.h  Trace.h
include/file-ex/logger/: Logger.h
include/handler-ex/crash/: CrashBase.h
include/kits/: OutputKit.h  ToolKit.h  corekit.hpp  hashkit.hpp  outputkit.hpp  toolkit.hpp
include/pool/: cipherpool.hpp  cryptopool.hpp  threadpool.hpp
include/socket/: netpacket.hpp  policy.hpp  socket.hpp
include/socket-ex/: AccessPolicy.h  NetPacket.h  Socket.h
include/socket-ex/Client/: Client.h
include/socket-ex/server/: Server.h
include/socket/client/: client.hpp
include/socket/server/: server.hpp
include/threadpool-ex/: ThreadPool.h
include/tools/: Console.h  Flag.h  Platform.h  Status.h  Time.h  Utf.h
include/tools/charset/: utf.hpp
source/Algorithm/: Algorithm.cpp
test/05-11-2025/algorithmpool-test/: CMakeLists.txt  algorithmpool-test.cpp
test/05-11-2025/algorithmpool-test/linux/: CMakeCache.txt  Makefile  algorithmpool-test  cmake_install.cmake
test/14-11-2025/file-test/: .gitignore  CMakeLists.txt  file-test.cpp
test/20-12-2025/socket-v2-secure/: CMakeLists.txt  socket-v2-secure-test-client.cpp  socket-v2-secure-test-server.cpp
test/26-11-2025/server-socket/: .gitignore  CMakeLists.txt  client-test.cpp  server-socket-test.cpp
(+56 files in other folders)
